<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="mr_media_route_button_content_description">Cast</string>
    <string name="mr_media_route_chooser_searching">Searching for devices…</string>
    <string name="mr_media_route_chooser_title">Connect to device</string>
    <string name="mr_media_route_controller_disconnect">Disconnect</string>
    <string name="mr_system_route_name">System</string>
    <string name="mr_user_route_category_name">Devices</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="a_to_z">A to Z</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="account_created">Your account has been created.</string>
    <string name="account_login">Account/Login</string>
    <string name="account_required">A Crunchyroll account is required to use this feature.</string>
    <string name="action_settings">Settings</string>
    <string name="add_this_show_to_queue">Add this show to your Queue!</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="all_drama">All Drama</string>
    <string name="allaccess_membership_duration">All-Access Membership - %1$s %2$s Free Trial</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="already_premium">You are already a Premium Member, thank you for your support!</string>
    <string name="anime">Anime</string>
    <string name="anime_membership_duration">Anime Membership - %1$s %2$s Free Trial</string>
    <string name="anonymous">Anonymous</string>
    <string name="app_name">chromecast-sdk</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="ascending">Ascending</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="auto">Auto</string>
    <string name="autoplay">Autoplay</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="cast">Cast</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="casting_to_w_text">Casting to %s</string>
    <string name="cio__btn_ok">OK</string>
    <string name="cio__indexTag" />
    <string name="cio__spinner_prompt">Please select</string>
    <string name="cio__validation_dialog_msg">Highlighted items are required on this page</string>
    <string name="contact_us">Contact Us</string>
    <string name="continue_str">Continue</string>
    <string name="current_user">Current user</string>
    <string name="general">General</string>
    <string name="help">Help</string>
    <string name="learn_more">or learn more about Premium</string>
    <string name="load_images">Load images</string>
    <string name="load_images_summary">Download thumbnails and other images</string>
    <string name="membership">Membership</string>
    <string name="no_thanks">No Thanks</string>
    <string name="preferenceScreen">preferenceScreen</string>
    <string name="preferred_language">Preferred language</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="problem">Problem</string>
    <string name="search">Search</string>
    <string name="send">Send</string>
    <string name="share">Share</string>
    <string name="size_large">Large</string>
    <string name="size_list">List</string>
    <string name="size_small">Small</string>
    <string name="start_free_trial">Start Free Trial</string>
    <string name="start_watching">Start Watching</string>
    <string name="subject">Subject</string>
    <string name="support">Support</string>
    <string name="switch_view">Switch View</string>
    <string name="thanks_bang">Thanks!</string>
    <string name="upgrade_title">Become a Premium Member!</string>
    <string name="upsell_premium">This video is for premium members only</string>
    <string name="upsell_subscription_value_line_1">Only %s/mo after end of free trial.</string>
    <string name="upsell_subscription_value_line_2">Cancel anytime.</string>
    <string name="version">Version</string>
    <string name="video_quality">Video Quality</string>
    <string name="your_email">Your Email</string>
    <string name="your_message">Your message</string>
</resources>