<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:key="@string/preferenceScreen"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:layout="@layout/preference_item_category" android:title="@string/general" android:key="generalCategory">
        <ListPreference android:layout="@layout/preference_item_text" android:title="@string/preferred_language" android:key="userLocale" android:summary="" />
        <CheckBoxPreference android:layout="@layout/preference_item_checkbox" android:title="@string/load_images" android:key="imageLoadingEnabled" android:summary="@string/load_images_summary" />
        <ListPreference android:layout="@layout/preference_item_text" android:title="@string/video_quality" android:key="videoQuality" android:summary="" />
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preference_item_category" android:title="@string/about" android:key="aboutCategory">
        <com.crunchyroll.crunchyroid.preference.CustomTextPreference android:layout="@layout/preference_item_text" android:title="@string/current_user" android:selectable="false" android:key="user" android:summary="" />
        <com.crunchyroll.crunchyroid.preference.CustomTextPreference android:layout="@layout/preference_item_text" android:title="@string/version" android:selectable="false" android:key="version" android:summary="" />
    </PreferenceCategory>
    <PreferenceCategory android:layout="@layout/preference_item_category" android:title="@string/support" android:key="supportCategory">
        <com.crunchyroll.crunchyroid.preference.CustomTextPreference android:layout="@layout/preference_item_text" android:title="@string/help" android:selectable="true" android:key="help" android:summary="" />
        <com.crunchyroll.crunchyroid.preference.CustomTextPreference android:layout="@layout/preference_item_text" android:title="@string/privacy_policy" android:selectable="true" android:key="privacy" android:summary="" />
        <com.crunchyroll.crunchyroid.preference.CustomTextPreference android:layout="@layout/preference_item_text" android:title="@string/contact_us" android:selectable="true" android:key="contact_us" android:summary="" />
    </PreferenceCategory>
</PreferenceScreen>