<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:id="@id/card_view" android:layout_width="wrap_content" android:layout_height="wrap_content" card_view:cardCornerRadius="3.0dip" xmlns:card_view="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="14.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="14.0sp" android:textColor="@color/black" android:layout_gravity="center" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/switch_view" />
        <RadioGroup android:id="@id/radio_group" android:layout_width="100.0dip" android:layout_height="wrap_content">
            <RadioButton android:gravity="start|center" android:id="@id/size_list" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:button="@null" android:text="@string/size_list" android:drawableLeft="@drawable/button_radio_selector" android:drawablePadding="10.0dip" />
            <RadioButton android:gravity="start|center" android:id="@id/size_small" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:button="@null" android:text="@string/size_small" android:drawableLeft="@drawable/button_radio_selector" android:drawablePadding="10.0dip" />
            <RadioButton android:gravity="start|center" android:id="@id/size_large" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:button="@null" android:text="@string/size_large" android:drawableLeft="@drawable/button_radio_selector" android:drawablePadding="10.0dip" />
        </RadioGroup>
    </LinearLayout>
</android.support.v7.widget.CardView>