<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/home_menu_white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <FrameLayout android:id="@id/close" android:background="?android:selectableItemBackground" android:padding="16.0dip" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_close_black" />
        </FrameLayout>
    </RelativeLayout>
    <TextView android:id="@id/upsell_reason" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/popup_padding_upsell_lr" android:layout_marginRight="@dimen/popup_padding_upsell_lr" android:layout_marginBottom="12.0dip" android:text="@string/upsell_premium" style="@style/tab1.black" />
    <TextView android:id="@id/upsell_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/popup_padding_upsell_lr" android:layout_marginRight="@dimen/popup_padding_upsell_lr" android:text="@string/upgrade_title" style="@style/display1.orange" />
    <RelativeLayout android:id="@id/point_group_0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/popup_padding_upsell_lr" android:layout_marginTop="12.0dip" android:layout_marginRight="@dimen/popup_padding_upsell_lr">
        <ImageView android:id="@id/point_0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_checkbox_orange" android:layout_centerVertical="true" />
        <TextView android:id="@id/point_text_0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="9.0dip" android:text="AD-FREE" android:layout_toRightOf="@id/point_0" android:layout_centerVertical="true" style="@style/tab1.black54" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/point_group_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/popup_padding_upsell_lr" android:layout_marginTop="10.0dip" android:layout_marginRight="@dimen/popup_padding_upsell_lr">
        <ImageView android:id="@id/point_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_checkbox_orange" android:layout_centerVertical="true" />
        <TextView android:id="@id/point_text_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="9.0dip" android:text="LATEST SIMULCASTS" android:layout_toRightOf="@id/point_1" android:layout_centerVertical="true" style="@style/tab1.black54" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/point_group_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/popup_padding_upsell_lr" android:layout_marginTop="10.0dip" android:layout_marginRight="@dimen/popup_padding_upsell_lr">
        <ImageView android:id="@id/point_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_checkbox_orange" android:layout_centerVertical="true" />
        <TextView android:id="@id/point_text_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="9.0dip" android:text="HD VIDEO QUALITY" android:layout_toRightOf="@id/point_2" android:layout_centerVertical="true" style="@style/tab1.black54" />
    </RelativeLayout>
    <ImageView android:layout_gravity="center_horizontal" android:id="@id/hime" android:layout_width="fill_parent" android:layout_height="0.0dip" android:src="@drawable/hime_signup_premium" android:layout_weight="1.0" />
    <TextView android:layout_gravity="center_horizontal" android:id="@id/upsell_cost" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/upsell_subscription_value_line_1" style="@style/caption1.black54" />
    <TextView android:layout_gravity="center_horizontal" android:id="@id/upsell_cost_line_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/upsell_subscription_value_line_2" style="@style/caption1.black54" />
    <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:id="@id/upsell_button_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/popup_padding_upsell_lr" android:layout_marginTop="16.0dip" android:layout_marginRight="@dimen/popup_padding_upsell_lr" android:layout_marginBottom="16.0dip">
        <Button android:id="@id/cancel_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="8.0dip" android:text="@string/no_thanks" android:singleLine="true" android:layout_weight="1.0" style="@style/button.gray.unpadded" />
        <Button android:id="@id/ok_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/start_free_trial" android:singleLine="true" android:layout_weight="1.0" style="@style/button.orange.unpadded" />
    </LinearLayout>
</LinearLayout>