<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:background="@color/home_menu_white" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <FrameLayout android:id="@id/back" android:padding="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_centerVertical="true">
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_arrow_left_black" />
            </FrameLayout>
            <TextView android:textSize="18.0sp" android:textColor="@color/black87" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Reset Password" android:layout_centerInParent="true" />
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/main_fragment_margin_lr" android:layout_marginTop="68.0dip" android:layout_marginRight="@dimen/main_fragment_margin_lr">
            <com.wrapp.floatlabelededittext.FloatLabeledEditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="22.0dip" app:fletTextAppearance="@style/caption2.black54" app:fletPaddingBottom="4.0dip">
                <EditText android:id="@id/email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/your_email" android:singleLine="true" android:inputType="textEmailAddress" style="@style/subheader2.black" />
            </com.wrapp.floatlabelededittext.FloatLabeledEditText>
            <TextView android:id="@id/forgot_password_message" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="A link will be sent to your email address to reset your password." style="@style/caption1.black54" />
            <Button android:layout_gravity="center_horizontal" android:id="@id/reset_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="48.0dip" android:text="@string/continue_str" android:singleLine="true" style="@style/button.orange.unpadded" />
            <TextView android:layout_gravity="center_horizontal" android:id="@id/cancel" android:background="?android:selectableItemBackground" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" style="@style/buttonTextOnly.orange" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>